# template-model

./: Makefile  README.md  mkdocs.yml  setup.cfg  setup.py
.github/workflows/: main.yaml
docs/: 404.html  index.html  search.html
docs/Boolean/: index.html
docs/Date/: index.html
docs/Datetime/: index.html
docs/Decimal/: index.html
docs/Double/: index.html
docs/Float/: index.html
docs/FriendlyPerson/: index.html
docs/FriendlyPerson_knows/: index.html
docs/Integer/: index.html
docs/Ncname/: index.html
docs/Nodeidentifier/: index.html
docs/Objectidentifier/: index.html
docs/Person/: index.html
docs/String/: index.html
docs/Time/: index.html
docs/Uri/: index.html
docs/Uriorcurie/: index.html
docs/credits/: index.html
docs/home/: index.html
docs/person__first_name/: index.html
docs/person__id/: index.html
docs/person__knows/: index.html
docs/person__last_name/: index.html
docs/search/: search_index.json
model/: CONFIG.yaml
template_model/: template_model.py
template_model/jsonld/: template_model.context.jsonld  template_model.model.context.jsonld
template_model/jsonschema/: template_model.schema.json
tests/: test_input_against_model.py
