[metadata]
name = template_model
url = https://github.com/linkmodel/template-model
author = Jane Doe
author_email = jane.doe@example.com
summary = A cool model
description = A cool model
long_description = A cool model
home_page = https://linkmodel.github.io/template_model
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model

[options]
include_package_data = True

[files]
packages =
    template_model

data-files = template_model/model = template_model/model/*
    template_model/jsonld_context = template_model/jsonld_context/*
    template_model/json_schema = template_model/json_schema/*
    template_model/model = template_model/model/*


